# Project-Gambit

./: Progress Report: Outline.md  README.md  Scratch.ipynb  add_centipawn.py  pyproject.toml
Dev Scripts/: add_centipawn.py  counts.py  mate_in_x.py  scratch.ipynb  to-do.md
Games/Storage/ply=151/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=152/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=153/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=154/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=155/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=156/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=157/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=158/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=159/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=160/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=161/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=162/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=163/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=164/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=165/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=166/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Games/Storage/ply=167/: df3602b9d79a4d92b1ba7b49eb8c94f6-0.parquet
Objects/: Application.py  Dagger.py  Navigator.py  Parser.py  Position.py  Utilities.py  cent_log_reg.ipynb  scratch.ipynb
(+482 files in other folders)
