[tool.poetry]
name           = "project gambit"
version        = "0.1.0"
description    = "A chess analytics project using linear algebra and graph theory to enhance game analysis. It identifies key decision points and suggests superior alternatives through a directed search algorithm using centipawn values."
authors        = ["James Parkington <pongs.acreage.0o@icloud.com>"]
readme         = "README.md"

[tool.poetry.dependencies]
python         = "^3.11"
numpy          = "^1.24.3"
pandas         = "^2.0.1"
pyarrow        = "^14.0.1"
chess          = "^1.9.4"
alive-progress = "^3.1.2"
stockfish = "^3.28.0"

[tool.poetry.dev-dependencies]
cython         = "^0.29.34"
ipykernel      = "^6.25.1"

[build-system]
requires       = ["poetry-core"]
build-backend  = "poetry.core.masonry.api"